package at.htl.entity;

public enum PersonType {
    STUDENT,
    TEACHER
}
